--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^12.3.6
   image_picker: ^1.1.2
   cloud_firestore: ^5.5.0
+  firebase_messaging: ^15.1.6
   #firebase_auth: ^5.3.3
 
 dev_dependencies:
